[tool.poetry]
name = "bunt"
version = "0.1.0"
description = "Colorful, scannable QR-like codes. 🌈"
authors = ["Patrick Düggelin <patrick.dueggelin@live.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python-headless = "^4.8.1.78"
drawsvg = "^2.3.0"
numpy = "^1.26.2"
imutils = "^0.5.4"
scipy = "^1.11.4"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
streamlit = "^1.29.0"
watchdog = "^3.0.0"
cairosvg = "^2.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
